--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,15 @@ services:
       - "50000:50000"
     volumes:
       - C:/jenkins_home_softserve:/var/jenkins_home
+
+  ngrok:
+    image: ngrok/ngrok:latest
+    command:
+      - "http"
+      - "http://jenkins:8080"
+    environment:
+      - NGROK_AUTHTOKEN=2qRx3YPoWDroiH321kOqKwEEGfW_2CZAW92yPN7QhqZWZbmvf
+    ports:
+      - "4040:4040"
+
+
