--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 services:
   jenkins:
-    build: .
+    build:
+      context: .
+      args:
+        USERHOMEPATH: ${USERPROFILE}
+        AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+        AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
     ports:
       - "8080:8080"
       - "50000:50000"
