--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     build:
       context: .
       args:
-        AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-        AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+        AWS_ACCESS_KEY_ID: "your_access_key_id"
+        AWS_SECRET_ACCESS_KEY: "your_secret_access_key"
     ports:
       - "8080:8080"
       - "50000:50000"
