--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "http"
       - "http://jenkins:8080"
     environment:
-      - NGROK_AUTHTOKEN=2qRx3YPoWDroiH321kOqKwEEGfW_2CZAW92yPN7QhqZWZbmvf
+      - NGROK_AUTHTOKEN={your_ngrok_authtoken}
     ports:
       - "4040:4040"
 
