--- a/ansible/inventories/hosts.ini
+++ b/ansible/inventories/hosts.ini
@@ -1,3 +1,2 @@
-[webservers]
-webserver ansible_host={{ lookup('env', 'APP_SERVER_IP') }}
-ansible_user=ubuntu
+[webservers] 
+webserver ansible_host={{ lookup('env', 'APP_SERVER_IP') }} ansible_user=ubuntu
