--- a/terraform/app_Infra/hosts.ini
+++ b/terraform/app_Infra/hosts.ini
@@ -1,3 +1,3 @@
 
 [webservers]
-webserver ansible_host=54.211.66.155 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/demo1Ec2Key
+webserver-13.220.255.214 ansible_host=13.220.255.214 ansible_user=ubuntu
